force-app/main/default/objects/PPIA_Audit_Log__c/fields/Collection_Rate__c.field-meta.xml
<CustomField>
    <fullName>Collection_Rate__c</fullName>
    <label>Collection Rate</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>