force-app/main/default/objects/PPIA_Audit_Log__c/fields/Episodes_T12M__c.field-meta.xml
<CustomField>
    <fullName>Episodes_T12M__c</fullName>
    <label>Episodes T12M</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>