force-app/main/default/objects/PPIA_Audit_Log__c/fields/Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Member_Count__c</fullName>
    <label>Member Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>