force-app/main/default/objects/PPIA_Audit_Log__c/fields/Prior_Score__c.field-meta.xml
<CustomField>
    <fullName>Prior_Score__c</fullName>
    <label>Prior Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>