force-app/main/default/objects/PPIA_Audit_Log__c/fields/Prior_Stars__c.field-meta.xml
<CustomField>
    <fullName>Prior_Stars__c</fullName>
    <label>Prior Stars</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>