force-app/main/default/objects/PPIA_Audit_Log__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Run Date</label>
    <type>DateTime</type>
</CustomField>