force-app/main/default/objects/PPIA_Audit_Log__c/fields/Score_Delta__c.field-meta.xml
<CustomField>
    <fullName>Score_Delta__c</fullName>
    <label>Score Delta</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>